--- a/Pandas_Loc_&_iLoc.ipynb
+++ b/Pandas_Loc_&_iLoc.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyN3yGV2yXk4u1kpJPMV3Co/",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Franchertz/Python-Learning/blob/main/Pandas_Loc_%26_iLoc.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -36,7 +48,7 @@
       "metadata": {
         "id": "FUVuzvalpGHw"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,7 +71,7 @@
         "id": "pKuPxpv8m2sW",
         "outputId": "e21d2af4-c47c-4b5d-cf61-16e8be536faf"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -90,7 +102,7 @@
         "id": "30AmfoYCnyeG",
         "outputId": "399e0957-0fa6-467d-c33a-a664e06e9de2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +132,7 @@
         "id": "na1_XqhdqrQW",
         "outputId": "0e409a50-e551-42bf-f035-2dc68615dd0d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +162,7 @@
         "id": "n9Wzp6j5q9wt",
         "outputId": "50b38b1a-b054-4f0a-f311-37f5fc7459a1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
