--- a/Pandas_Tail,_Column_&_Index.ipynb
+++ b/Pandas_Tail,_Column_&_Index.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+9oYlX/QbhidrpWaMVJKx",
+      "authorship_tag": "ABX9TyPzCWkAixT15VDwHFplF9cH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -724,6 +724,17 @@
           "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#data.dropna() # use function dropna() to drop Not A Number(NaN) in a dataset"
+      ],
+      "metadata": {
+        "id": "pKwphci-xya3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
