--- a/Pandas_Tail,_Column_&_Index.ipynb
+++ b/Pandas_Tail,_Column_&_Index.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzCWkAixT15VDwHFplF9cH",
+      "authorship_tag": "ABX9TyN6I1LoVQBIWx/lJtKU0//Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     {
       "cell_type": "code",
       "source": [
-        "cat Automobile.csv"
+        "#cat Automobile.csv"
       ],
       "metadata": {
         "id": "bO2FP9QqqD6X"
@@ -728,7 +728,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#data.dropna() # use function dropna() to drop Not A Number(NaN) in a dataset"
+        "#data_auto.dropna() # use function dropna() to drop Not A Number(NaN) in a dataset"
       ],
       "metadata": {
         "id": "pKwphci-xya3"
